# screen-time

./: Cargo.toml
src/: app_info.rs  collected_app_info.rs  data.rs  desktop_info.rs  main.rs  most_used_widget.rs  time_helper.rs  total_usage_widget.rs  usage_widget.rs
src/app_info/: app_info_provider.rs  desktop_app_info.rs  web_app_info.rs
