[package]
name = "screen-time-relm"
version = "0.1.0"
authors = ["Julian Konchunas <konchunas@gmail.com>"]
edition = "2018"

[dependencies]
gio = "0.5.0"
relm = "0.15.2"
relm-derive = "0.15.2"
relm-attributes = "0.15.2"

dirs = "1.0.4"
chrono = "0.4.6"
lazy_static = "1.2.0"
[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]

[patch.crates-io]
# gio = { path = '/mnt/antergos/home/julian/Projects/gio/' }
# gtk = { path = '/mnt/antergos/home/julian/Projects/gtk/' }